--- a/pages/Index.html
+++ b/pages/Index.html
@@ -308,7 +308,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="/script/script.js"></script>
 </body>
 
 </html>
