--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link href="/style/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -308,7 +308,7 @@
         </div>
     </div>
 
-    <script src="/script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
