--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="intro-container">
             <h1>Hi,</h1>
             <h1>I'm Neha</h1>
-            <span>Frontend Developer • UI-focused • JavaScript</span>
+            <span>Frontend Developer • UI-focused</span>
             <span>I build responsive, accessible interfaces with attention to detail.</span>
             <div class="scroll-cue">
                 <span>Scroll</span>
